add javaOptions and hideResolveMessage preferences